--- a/main.less
+++ b/main.less
@@ -3,11 +3,15 @@
     src: ~"url('../fonts/northwell-alt.ttf') format('truetype')";
 }
 
+@primary-dark: #232323;
+@primary-white: #ffffff;
+
 * {
     font-family: 'Nunito', sans-serif;
     font-size: 18px;
     margin-bottom: 8px;
     line-height: 1.8;
+    color: @primary-dark;
     @media only screen and (max-width: 768px) {
         font-size: 16px;
     }
@@ -29,12 +33,12 @@ a {
     background: none;
     margin: 24px;
     text-decoration: none;
-    color: black;
+    color: @primary-dark;
     display: inline-block;
     border-radius: 2px;
     &:hover {
         // text-decoration: none;
-        color: black;
+        color: @primary-dark;
     }
 }
 
@@ -51,22 +55,24 @@ a {
     background-image: url("img/wedding.jpg");
     background-repeat: no-repeat;
     background-size: 100% auto;
-    color: white;
+    
     @media only screen and (max-width: 768px) {
         background-size: auto 100%;
+    }
+    *{
+        color: @primary-white;
     }
     .link {
         display: inline-block;
         margin: 16px;
         a {
-            color: white;
+            // color: white;
             text-transform: uppercase;
             letter-spacing: 1px;
             font-size: 16px;
         }
     }
     .rsvp {
-        color: white;
         &:hover {
             color: white;
         }
@@ -76,18 +82,11 @@ a {
 .details {
 
     .event {
-        margin-bottom: 24px;
+        margin-bottom: 12px;
         border-right: 1px solid #eaeaea;
         &:last-child {
             border-right: none;
-        }
-        // @media only screen and (max-width: 576px) {
-        //     border-right: none;
-        //     border-bottom: 1px solid #eaeaea;
-        //     &:last-child {
-        //         border-bottom: none;
-        //     }
-        // }
+        } 
         img {
             width: 72px;
             @media only screen and (max-width: 768px) {
@@ -120,24 +119,20 @@ a {
             top: 60%;
             left: 50%;
             transform: translateX(-50%);
-            color: white; // opacity: 0;
-        } // &:hover {
-        //     .name {
-        //         opacity: 1;
-        //     }
-        // }
+            color: white;
+        } 
         @media only screen and (max-width: 576px) {
             img {
                 display: none;
             }
             .name {
                 opacity: 1;
-                color: black;
+                color: @primary-dark;
                 position: relative;
                 top: auto;
                 left: auto;
                 transform: none;
-                font-size: 20px;
+                font-size: 16px;
             }
         }
     }
@@ -162,6 +157,8 @@ a {
 .small-title {
     font-family: 'northwell', 'Rochester', cursive;
     font-size: 72px;
+    line-height: 1;
+    margin-top: 16px;
 }
 
 .title-icon img {
