--- a/main.css
+++ b/main.css
@@ -3,14 +3,23 @@
   src: url('../fonts/northwell-alt.ttf') format('truetype');
 }
 * {
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Goudy Bookletter 1911', serif;
   font-size: 18px;
   margin-bottom: 8px;
   line-height: 1.8;
-  color: #232323;
+  color: #3a3a3a;
 }
 @media only screen and (max-width: 768px) {
   * {
+    font-size: 16px;
+  }
+}
+.info {
+  font-size: 20px;
+  letter-spacing: 1;
+}
+@media only screen and (max-width: 768px) {
+  .info {
     font-size: 16px;
   }
 }
@@ -19,7 +28,7 @@ a:hover {
 }
 .rsvp {
   border: 3px solid;
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Maven Pro', sans-serif;
   font-size: 20px;
   font-weight: 700;
   letter-spacing: 4px;
@@ -27,12 +36,12 @@ a:hover {
   background: none;
   margin: 24px;
   text-decoration: none;
-  color: #232323;
+  color: #3a3a3a;
   display: inline-block;
   border-radius: 2px;
 }
 .rsvp:hover {
-  color: #232323;
+  color: #3a3a3a;
 }
 .home {
   background-image: url("img/home.jpg");
@@ -43,6 +52,11 @@ a:hover {
   .home {
     background-size: auto 100%;
   }
+}
+.story .emoji {
+  width: 24px;
+  margin-right: 8px;
+  margin-top: 4px;
 }
 .wedding {
   background-image: url("img/wedding.jpg");
@@ -62,14 +76,16 @@ a:hover {
   margin: 16px;
 }
 .wedding .link a {
+  font-family: 'Maven Pro', sans-serif;
   text-transform: uppercase;
-  letter-spacing: 1px;
   font-size: 16px;
+  letter-spacing: 1;
 }
 .wedding .rsvp:hover {
   color: white;
 }
 .details .event {
+  letter-spacing: 1;
   margin-bottom: 12px;
   border-right: 1px solid #eaeaea;
 }
@@ -77,47 +93,62 @@ a:hover {
   border-right: none;
 }
 .details .event img {
-  width: 72px;
+  margin-bottom: 16px;
+  width: 96px;
+}
+@media only screen and (max-width: 1000px) {
+  .details .event img {
+    width: 64px;
+  }
 }
 @media only screen and (max-width: 768px) {
   .details .event img {
-    width: 48px;
+    width: 56px;
+    margin-bottom: 8px;
   }
+}
+.details .event .time {
+  font-weight: 700;
+  color: #999;
+  margin-bottom: 0px;
 }
 @media only screen and (max-width: 768px) {
   .details .event .time {
     display: inline-block;
+    font-weight: 400;
+    font-size: 14px;
   }
+}
+.details .event .to-do {
+  text-transform: uppercase;
 }
 @media only screen and (max-width: 768px) {
   .details .event .to-do {
     display: inline-block;
+    font-size: 14px;
   }
 }
+@media only screen and (max-width: 768px) {
+}
+.people .item {
+  margin-bottom: 16px;
+}
 .people .item img {
-  width: 100%;
+  width: 128px;
   border-radius: 100%;
 }
-.people .item .name {
-  position: absolute;
-  top: 60%;
-  left: 50%;
-  transform: translateX(-50%);
-  color: white;
+@media only screen and (max-width: 1024px) {
+  .people .item img {
+    width: 100%;
+  }
 }
 @media only screen and (max-width: 576px) {
   .people .item img {
     display: none;
   }
-  .people .item .name {
-    opacity: 1;
-    color: #232323;
-    position: relative;
-    top: auto;
-    left: auto;
-    transform: none;
-    font-size: 16px;
-  }
+}
+.people .item .name {
+  font-size: 16px;
 }
 .container {
   position: absolute;
@@ -131,11 +162,12 @@ a:hover {
 .big-title {
   font-family: 'northwell', 'Rochester', cursive;
   font-size: 108px;
+  line-height: 1.5;
 }
 .small-title {
   font-family: 'northwell', 'Rochester', cursive;
   font-size: 72px;
-  line-height: 1;
+  line-height: 1.5;
   margin-top: 16px;
 }
 .title-icon img {
