--- a/main.less
+++ b/main.less
@@ -127,7 +127,7 @@ a {
             }
         }
         .to-do {
-            text-transform: uppercase;
+            // text-transform: uppercase;
 
             @media only screen and (max-width: 768px) {
                 display: inline-block;
