--- a/main.less
+++ b/main.less
@@ -32,12 +32,12 @@ a {
 }
 
 .rsvp {
-    border: 3px solid;
+    border: 2px solid;
     font-family: 'Maven Pro', sans-serif;
     font-size: 20px;
-    font-weight: 700;
+    font-weight: 500;
     letter-spacing: 4px;
-    padding: 8px 32px 7px 32px;
+    padding: 4px 32px 3px 32px;
     background: none;
     margin: 24px;
     text-decoration: none;
@@ -86,7 +86,10 @@ a {
             font-family: 'Maven Pro', sans-serif;
             text-transform: uppercase; // letter-spacing: 1px;
             font-size: 16px;
-            letter-spacing: 1;
+            letter-spacing: 2;
+            &:hover {
+                color: white;
+            }
         }
     }
     .rsvp {
@@ -128,7 +131,6 @@ a {
         }
         .to-do {
             // text-transform: uppercase;
-
             @media only screen and (max-width: 768px) {
                 display: inline-block;
                 font-size: 16px;
@@ -138,9 +140,9 @@ a {
 }
 
 .people {
-    @media only screen and (max-width: 768px) {
-        // margin-left: 16px;
-        // margin-right: 16px;
+    background: #2d3b82;
+    .small-title {
+        color: white;
     }
     .item {
         margin-bottom: 16px;
@@ -158,6 +160,11 @@ a {
 
         .name {
             font-size: 16px;
+            color: white;
+            @media only screen and (max-width: 768px) {
+                font-size: 18px;
+                letter-spacing: 1;
+            }
         }
     }
 }
@@ -186,9 +193,16 @@ a {
 
 .small-title {
     font-family: 'northwell', 'Rochester', cursive;
-    font-size: 72px;
+    font-family: 'Maven Pro', sans-serif;
+    font-size: 56px;
     line-height: 1.5;
     margin-top: 16px;
+    letter-spacing: 3;
+    font-weight: 700;
+    text-transform: uppercase;
+    @media only screen and (max-width: 768px) {
+        font-size: 36px;
+    }
 }
 
 .title-icon img {
