--- a/main.less
+++ b/main.less
@@ -7,8 +7,7 @@
 @primary-white: #ffffff;
 
 * {
-    font-family: 'Goudy Bookletter 1911', serif;
-    // font-family: 'Sorts Mill Goudy', serif;
+    font-family: 'Goudy Bookletter 1911', serif; // font-family: 'Sorts Mill Goudy', serif;
     font-size: 18px;
     margin-bottom: 8px;
     line-height: 1.8;
@@ -181,6 +180,7 @@ a {
                 right: auto;
                 background: none;
                 padding: auto;
+                color: @primary-dark;
             }
         }
     }
