--- a/main.css
+++ b/main.css
@@ -63,10 +63,35 @@ a:hover {
   background-image: url("img/home.jpg");
   background-repeat: no-repeat;
   background-size: 100% auto;
+  background-position: center;
 }
 @media only screen and (max-width: 1024px) {
   .home {
     background-size: auto 100%;
+  }
+}
+@media only screen and (max-width: 700px) {
+  .home .display-control {
+    display: block;
+  }
+  .home .title-row {
+    margin-bottom: 24px;
+  }
+  .home .title-icon img {
+    width: 20px;
+  }
+  .home .big-title {
+    font-size: 72px;
+  }
+}
+@media only screen and (max-width: 560px) {
+  .home {
+    background-image: url("img/home1.jpg");
+    background-position: right;
+  }
+  .home .title-row {
+    margin-top: -160px;
+    margin-bottom: -8px;
   }
 }
 .story .emoji {
@@ -278,18 +303,4 @@ a:hover {
 }
 .display-control {
   display: inline-block;
-}
-@media only screen and (max-width: 700px) {
-  .display-control {
-    display: block;
-  }
-  .title-row {
-    margin-bottom: 24px;
-  }
-  .title-icon img {
-    width: 20px;
-  }
-  .big-title {
-    font-size: 72px;
-  }
 }
