--- a/main.less
+++ b/main.less
@@ -196,10 +196,10 @@ a {
             margin-bottom: 16px;
             width: 96px;
             @media only screen and (max-width: 1000px) {
-                width: 64px;
+                width: 68px;
             }
             @media only screen and (max-width: 768px) {
-                width: 56px;
+                // width: 56px;
                 margin-bottom: 8px;
             }
         }
@@ -210,14 +210,14 @@ a {
             @media only screen and (max-width: 768px) {
                 display: inline-block;
                 font-weight: 400;
-                font-size: 16px;
+                // font-size: 16px;
             }
         }
         .to-do {
             // text-transform: uppercase;
             @media only screen and (max-width: 768px) {
                 display: inline-block;
-                font-size: 16px;
+                // font-size: 16px;
             }
         }
     }
